syntax = "proto3";

package proto;
option go_package = "oykeeper/proto";

message FileUploadRequest {
    string file_name  = 1;
    string record_uuid = 2;
    bytes chunk = 3;
}

message FileUploadResponse {
    string hash = 1;
    uint32 size = 2;
    string path = 3;
}

message FileDownloadReq {
    string uuid = 1;
}
message FileDownloadResp {
    string hash = 1;
    uint32 size = 2;
    string name = 3;
}


service FileService {
    rpc Upload(stream FileUploadRequest) returns (FileUploadResponse);
    rpc Download(FileDownloadReq) returns (stream FileDownloadResp);
}